.k8s/api-catalog/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcc-api-catalog-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcc-api-catalog-backend
  template:
    metadata:
      labels:
        app: tcc-api-catalog-backend
    spec:
      containers:
        - name: backend
          image: ahmentz/tcc-backend:api-catalog-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8000
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
