.k8s/api-catalog/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-catalog-backend-service
spec:
  type: NodePort
  selector:
    app: tcc-api-catalog-backend
  ports:
    - port: 8000
      targetPort: 8000
