.k8s/api-catalog/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-catalog-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /api/catalog
            pathType: Prefix
            backend:
              service:
                name: api-catalog-backend-service
                port:
                  number: 8000
